force-app/main/default/objects/Caso__c/Caso__c.object-meta.xml
<CustomObject>
    <label>Caso</label>
    <nameField>
        <displayFormat>CC-{0000}</displayFormat>
        <label>Caso Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Casi</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>