force-app/main/default/objects/Caso__c/fields/Data_Inizio__c.field-meta.xml
<CustomField>
    <fullName>Data_Inizio__c</fullName>
    <defaultValue>DATETIMEVALUE(NOW())</defaultValue>
    <label>Data Inizio</label>
    <type>DateTime</type>
</CustomField>