force-app/main/default/objects/Caso__c/fields/Descrizione__c.field-meta.xml
<CustomField>
    <fullName>Descrizione__c</fullName>
    <label>Descrizione</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>