force-app/main/default/objects/Caso__c/fields/Id_Funzionario__c.field-meta.xml
<CustomField>
    <fullName>Id_Funzionario__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Id Funzionario</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Casi</relationshipName>
    <type>Lookup</type>
</CustomField>