force-app/main/default/objects/Caso__c/fields/Oggetto__c.field-meta.xml
<CustomField>
    <fullName>Oggetto__c</fullName>
    <label>Oggetto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Informazione Account</fullName>
            </value>
            <value>
                <fullName>Cambio Password</fullName>
            </value>
            <value>
                <fullName>Stato Pratica / Ordine</fullName>
            </value>
            <value>
                <fullName>Modifica Dati Anagrafici</fullName>
            </value>
            <value>
                <fullName>Problemi Accesso</fullName>
            </value>
            <value>
                <fullName>Fatturazione / Pagamenti</fullName>
            </value>
            <value>
                <fullName>Spedizioni / Consegne</fullName>
            </value>
            <value>
                <fullName>Resi / Reclami</fullName>
            </value>
            <value>
                <fullName>Assistenza Tecnica</fullName>
            </value>
            <value>
                <fullName>Documentazione</fullName>
            </value>
            <value>
                <fullName>Cambio Piano / Offerta</fullName>
            </value>
            <value>
                <fullName>Disdetta / Cancellazione</fullName>
            </value>
            <value>
                <fullName>Feedback / Suggerimenti</fullName>
            </value>
            <value>
                <fullName>Reclamo Formale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>