force-app/main/default/objects/Caso__c/fields/Protocollazione__c.field-meta.xml
<CustomField>
    <fullName>Protocollazione__c</fullName>
    <label>Protocollazione</label>
    <length>20</length>
    <type>Text</type>
</CustomField>