force-app/main/default/objects/Caso__c/fields/Risposta__c.field-meta.xml
<CustomField>
    <fullName>Risposta__c</fullName>
    <label>Risposta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>