force-app/main/default/objects/Caso__c/fields/Stato__c.field-meta.xml
<CustomField>
    <fullName>Stato__c</fullName>
    <label>Stato</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Aperto</fullName>
                <default>true</default>
                <label>Aperto</label>
            </value>
            <value>
                <fullName>Chiuso</fullName>
            </value>
            <value>
                <fullName>In Lavorazione</fullName>
            </value>
            <value>
                <fullName>Presa In Carico</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>