force-app/main/default/objects/Caso__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Protocollazione__c</columns>
    <columns>Oggetto__c</columns>
    <columns>Stato__c</columns>
    <columns>Data_Inizio__c</columns>
    <columns>Data_Fine__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>